--- a/src/EVEWindow.css
+++ b/src/EVEWindow.css
@@ -105,3 +105,22 @@ header {
 .mdc-tab-bar__indicator {
   height: 3px;
 }
+
+.window-content {
+  flex-grow: 1;
+  position: relative;
+}
+
+.tab-eveccpwgl canvas {
+  height: 100%;
+  position: relative;
+  width: 100%;
+}
+
+.tab-eveccpwgl {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
