--- a/src/EVEWindow.css
+++ b/src/EVEWindow.css
@@ -124,3 +124,9 @@ header {
   bottom: 0;
   left: 0;
 }
+
+.window-tab-close {
+  vertical-align: bottom;
+  margin-left: 6px;
+  margin-right: -20px;
+}
